tdf#156135 - Add "Go to" action for "Avoid floating text" issue type

Change-Id: Ie98f291141f38ac5544c9e51a209fb9bf1f26d1f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154107
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
(cherry picked from commit b15697c8d5f395bb368e7d96998f2c0b0662b0de)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/154187